# Smartphones-insights

./: .gitignore  LICENSE  pyproject.toml  requirements.txt  setup.py
data/export/: outliers.csv
notebooks/: 0_smartphone_overview_eda.ipynb  1_smartphone_segment_analysis_eda.ipynb  2_feature_trends.ipynb  3_competitor_analysis_smartphone_features_pricing.ipynb  4_market_focus_consumer_focus.ipynb
notebooks/PS 1/: 0_smartphone_overview_eda.ipynb  1_smartphone_segment_analysis_eda.ipynb  2_feature_trends.ipynb  3_competitor_analysis_smartphone_features_pricing.ipynb  4_market_focus_consumer_focus.ipynb
references/: Mobile_Insight_Data_Dictionary.xlsx
scrape/: .gitignore  extract.py  scrape.py
src/constants/: constants.py
src/utils/: utils.py
